--- a/index.html
+++ b/index.html
@@ -1,40 +1,342 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rifa Premiada - R$500</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #fff8e7;
-      color: #333;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: linear-gradient(to right, #d4af37, #f9d976);
-      color: white;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Caroni Rifas - Compre Seu Número e Participe!</title>
+<style>
+  /* Reset e fonte */
+  * {
+    box-sizing: border-box;
+  }
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #121212;
+    color: #eee;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  header {
+    background: #007bff;
+    padding: 20px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 1.8rem;
+    letter-spacing: 1px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  }
+  main {
+    flex: 1;
+    max-width: 1200px;
+    margin: 30px auto;
+    background: #1e1e1e;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 0 20px #007bffaa;
+  }
+  h1, h2, h3 {
+    margin: 0 0 15px 0;
+  }
+  p {
+    font-size: 1.1rem;
+    line-height: 1.5;
+  }
+  .info {
+    background: #007bff22;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 30px;
+  }
+  .numbers {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(40px,1fr));
+    gap: 8px;
+    max-height: 350px;
+    overflow-y: auto;
+    background: #222;
+    padding: 15px;
+    border-radius: 8px;
+    border: 1px solid #007bffaa;
+  }
+  .number {
+    background: #333;
+    border-radius: 6px;
+    cursor: pointer;
+    text-align: center;
+    line-height: 40px;
+    font-weight: 700;
+    user-select: none;
+    color: #aaa;
+    border: 1px solid transparent;
+    transition: all 0.2s ease-in-out;
+  }
+  .number.available:hover {
+    background: #0056b3;
+    color: white;
+    border-color: #0090ff;
+  }
+  .number.available {
+    color: #00ff99;
+    border: 1px solid #008055;
+  }
+  .number.sold {
+    background: #660000;
+    color: #ff6666;
+    cursor: not-allowed;
+    border: 1px solid #990000;
+  }
+  .number.selected {
+    background: #00bfff;
+    color: #fff;
+    border-color: #00e5ff;
+  }
+  form {
+    margin-top: 30px;
+    max-width: 400px;
+  }
+  label {
+    display: block;
+    font-weight: 600;
+    margin-bottom: 6px;
+    margin-top: 12px;
+  }
+  input[type="text"] {
+    width: 100%;
+    padding: 10px 14px;
+    font-size: 1rem;
+    border-radius: 6px;
+    border: 1px solid #555;
+    background: #222;
+    color: #eee;
+  }
+  input[type="text"]:focus {
+    outline: none;
+    border-color: #00bfff;
+    box-shadow: 0 0 6px #00bfff88;
+  }
+  button {
+    margin-top: 20px;
+    padding: 12px 25px;
+    background: #007bff;
+    color: white;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  button:disabled {
+    background: #555;
+    cursor: not-allowed;
+  }
+  footer {
+    text-align: center;
+    padding: 15px;
+    background: #007bff;
+    color: white;
+    font-weight: 600;
+  }
+  /* Scrollbar para números */
+  .numbers::-webkit-scrollbar {
+    width: 8px;
+  }
+  .numbers::-webkit-scrollbar-track {
+    background: #111;
+  }
+  .numbers::-webkit-scrollbar-thumb {
+    background: #007bffaa;
+    border-radius: 4px;
+  }
+  /* Responsivo */
+  @media (max-width: 600px) {
+    main {
+      margin: 15px;
       padding: 20px;
-      text-align: center;
     }
-    .container {
-      max-width: 700px;
-      margin: auto;
-      padding: 20px;
-      background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      border-radius: 15px;
+    .numbers {
+      max-height: 250px;
     }
-    .highlight {
-      background: #d4af37;
-      color: white;
-      padding: 10px;
-      text-align: center;
-      border-radius: 10px;
-      margin: 20px 0;
-      font-size: 1.2em;
+  }
+</style>
+</head>
+<body>
+
+<header>
+  Caroni Rifas - Compre seu número e participe do sorteio!
+</header>
+
+<main>
+  <div class="info">
+    <h2>Rifa: 1000 números (000 a 999)</h2>
+    <p><strong>Prêmio:</strong> R$500 em dinheiro</p>
+    <p><strong>Valor por número:</strong> R$ 2,00</p>
+    <p><strong>Sorteio:</strong> 15 de Setembro de 2025 via lista de transmissão no WhatsApp</p>
+    <p><strong>Contato WhatsApp do administrador:</strong> <a href="https://wa.me/551497312602" target="_blank" style="color:#00ff99;">(55) 14 97312-602</a></p>
+    <p><strong>PIX para pagamento:</strong> <code style="background:#222;padding:4px 8px;border-radius:4px;">valdineicarone@gmail.com</code></p>
+  </div>
+
+  <h3>Escolha seus números disponíveis:</h3>
+  <div class="numbers" id="numbers-container" aria-label="Números disponíveis para rifa"></div>
+
+  <form id="buyForm" autocomplete="off" aria-label="Formulário de compra de números">
+    <label for="buyerName">Seu nome completo:</label>
+    <input type="text" id="buyerName" name="buyerName" placeholder="Digite seu nome" required />
+
+    <label for="buyerPhone">WhatsApp (somente números, ex: 5511999999999):</label>
+    <input type="text" id="buyerPhone" name="buyerPhone" placeholder="Digite seu WhatsApp" pattern="^\d{10,13}$" title="Digite seu WhatsApp com DDD, somente números" required />
+
+    <button type="submit" id="buyBtn" disabled>Comprar número(s) selecionado(s)</button>
+  </form>
+
+  <p id="statusMessage" aria-live="polite" style="margin-top:20px;"></p>
+</main>
+
+<footer>
+  &copy; 2025 Caroni Rifas - Todos os direitos reservados
+</footer>
+
+<script>
+  const totalNumbers = 1000; // 000 a 999
+  const numbersContainer = document.getElementById('numbers-container');
+  const buyBtn = document.getElementById('buyBtn');
+  const buyerNameInput = document.getElementById('buyerName');
+  const buyerPhoneInput = document.getElementById('buyerPhone');
+  const statusMessage = document.getElementById('statusMessage');
+
+  // Usar localStorage para simular persistência dos números vendidos
+  // Estrutura: "caroniRifasSoldNumbers" => string JSON array de números vendidos
+  let soldNumbers = new Set(JSON.parse(localStorage.getItem('caroniRifasSoldNumbers') || "[]"));
+  let selectedNumbers = new Set();
+
+  function pad(num, size = 3) {
+    return num.toString().padStart(size, '0');
+  }
+
+  // Criar os blocos de números
+  function renderNumbers() {
+    numbersContainer.innerHTML = '';
+    for (let i = 0; i < totalNumbers; i++) {
+      const numStr = pad(i);
+      const div = document.createElement('div');
+      div.classList.add('number');
+
+      if (soldNumbers.has(numStr)) {
+        div.classList.add('sold');
+        div.textContent = numStr;
+        div.setAttribute('aria-label', `Número ${numStr} vendido`);
+        div.setAttribute('aria-disabled', 'true');
+      } else {
+        div.classList.add('available');
+        div.textContent = numStr;
+        div.setAttribute('tabindex', '0');
+        div.setAttribute('role', 'button');
+        div.setAttribute('aria-pressed', 'false');
+        div.setAttribute('aria-label', `Número ${numStr} disponível, clique para selecionar`);
+
+        div.addEventListener('click', () => toggleSelect(numStr, div));
+        div.addEventListener('keydown', (e) => {
+          if (e.key === "Enter" || e.key === " ") {
+            e.preventDefault();
+            toggleSelect(numStr, div);
+          }
+        });
+      }
+      numbersContainer.appendChild(div);
     }
+    updateBuyButton();
+  }
+
+  // Selecionar/desselecionar número
+  function toggleSelect(numStr, element) {
+    if (selectedNumbers.has(numStr)) {
+      selectedNumbers.delete(numStr);
+      element.classList.remove('selected');
+      element.setAttribute('aria-pressed', 'false');
+    } else {
+      selectedNumbers.add(numStr);
+      element.classList.add('selected');
+      element.setAttribute('aria-pressed', 'true');
+    }
+    updateBuyButton();
+  }
+
+  // Habilitar botão comprar só se houver seleção e inputs preenchidos corretamente
+  function updateBuyButton() {
+    const hasSelection = selectedNumbers.size > 0;
+    const nameValid = buyerNameInput.value.trim().length > 0;
+    const phoneValid = /^\d{10,13}$/.test(buyerPhoneInput.value.trim());
+    buyBtn.disabled = !(hasSelection && nameValid && phoneValid);
+
+    if (soldNumbers.size >= totalNumbers) {
+      statusMessage.textContent = "Todos os números foram vendidos! A rifa está encerrada.";
+      buyBtn.disabled = true;
+      // Desabilitar seleção
+      document.querySelectorAll('.number.available').forEach(el => el.classList.add('sold'));
+    } else {
+      statusMessage.textContent = '';
+    }
+  }
+
+  // Atualizar botão ao digitar
+  buyerNameInput.addEventListener('input', updateBuyButton);
+  buyerPhoneInput.addEventListener('input', updateBuyButton);
+
+  // Comprar números
+  document.getElementById('buyForm').addEventListener('submit', e => {
+    e.preventDefault();
+
+    if (selectedNumbers.size === 0) {
+      alert('Por favor, selecione pelo menos um número.');
+      return;
+    }
+
+    const buyerName = buyerNameInput.value.trim();
+    const buyerPhone = buyerPhoneInput.value.trim();
+
+    if (!buyerName || !/^\d{10,13}$/.test(buyerPhone)) {
+      alert('Preencha seu nome e WhatsApp corretamente.');
+      return;
+    }
+
+    // Verificar se algum número selecionado já foi vendido (concorrência local)
+    for (const num of selectedNumbers) {
+      if (soldNumbers.has(num)) {
+        alert(`O número ${num} já foi vendido. Selecione outro número.`);
+        renderNumbers();
+        selectedNumbers.clear();
+        updateBuyButton();
+        return;
+      }
+    }
+
+    // Adicionar os números vendidos no localStorage (simulação)
+    selectedNumbers.forEach(num => soldNumbers.add(num));
+    localStorage.setItem('caroniRifasSoldNumbers', JSON.stringify(Array.from(soldNumbers)));
+
+    alert(
+      `Obrigado, ${buyerName}!\n` +
+      `Você comprou os números: ${Array.from(selectedNumbers).join(', ')}\n` +
+      `Entraremos em contato pelo WhatsApp: ${buyerPhone}\n\n` +
+      `Por favor, realize o pagamento via PIX:\n` +
+      `valdineicarone@gmail.com`
+    );
+
+    // Resetar formulário e seleção
+    selectedNumbers.clear();
+    buyerNameInput.value = '';
+    buyerPhoneInput.value = '';
+    renderNumbers();
+  });
+
+  // Inicializa a renderização
+  renderNumbers();
+  updateBuyButton();
+</script>
+
+</body>
+</html>   }
     img {
       max-width: 100%;
       border-radius: 10px;
