--- a/index.html
+++ b/index.html
@@ -1,56 +1,223 @@
- <!DOCTYPE html>
-<html lang="pt-BR">
+    <!DOCTYPE html>
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Caroni Rifas - Concorra a R$500!</title>
+  <meta charset="UTF-8">
+  <title>Caroni Rifas - R$500 no Pix</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    * { box-sizing: border-box; }
     body {
-      margin: 0; font-family: 'Segoe UI', sans-serif;
-      background: #0f0f0f; color: #fff;
-      display: flex; flex-direction: column;
-      min-height: 100vh;
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      margin: 0;
+      padding: 0;
+      text-align: center;
     }
     header {
-      background: linear-gradient(90deg, #00264d, #004080);
+      background: #111;
+      color: #fff;
       padding: 20px;
+    }
+    h1 {
+      margin: 0;
+      font-size: 32px;
+    }
+    .prize-img {
+      width: 100%;
+      max-width: 350px;
+      margin: 20px auto;
+      border-radius: 15px;
+      box-shadow: 0 0 10px #aaa;
+    }
+    .pix-box {
+      margin: 15px auto;
+      padding: 10px;
+      background: #e0ffe0;
+      border: 1px solid #0a0;
+      display: inline-block;
+      border-radius: 10px;
+    }
+    .pix-box input {
+      border: none;
+      font-size: 16px;
+      background: transparent;
+      width: 250px;
       text-align: center;
-      color: gold;
-      font-size: 2rem;
-      font-weight: bold;
-      box-shadow: 0 4px 10px #000a;
-      letter-spacing: 1px;
     }
-    .banner {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin: 0 auto;
-    }
-    main {
-      flex: 1; max-width: 1100px; margin: 30px auto;
-      padding: 25px; background: #1b1b1b;
-      border-radius: 12px; box-shadow: 0 0 15px #007bff55;
-    }
-    .info {
-      background: #003366;
-      border-left: 5px solid gold;
-      padding: 15px;
+    .copy-btn {
+      background: #00c853;
+      color: white;
+      border: none;
+      padding: 8px 12px;
       border-radius: 8px;
-      margin-bottom: 25px;
-    }
-    .info p {
-      margin: 8px 0;
-      font-size: 1.1rem;
-    }
-    h3 {
-      margin-bottom: 10px;
-      color: gold;
+      margin-left: 10px;
+      cursor: pointer;
     }
     .numbers {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      max-width: 600px;
+      margin: 20px auto;
+    }
+    .number {
+      width: 50px;
+      height: 50px;
+      margin: 5px;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
+    .number.selected {
+      background: #00c853;
+      color: white;
+    }
+    .number.sold {
+      background: #d32f2f;
+      color: white;
+      pointer-events: none;
+    }
+    .buy-box {
+      margin: 20px auto;
+      max-width: 400px;
+    }
+    input[type="text"] {
+      padding: 10px;
+      width: 80%;
+      margin: 10px 0;
+      font-size: 16px;
+    }
+    .buy-btn {
+      background: #1e88e5;
+      color: white;
+      padding: 12px 25px;
+      border: none;
+      font-size: 16px;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .share-btn {
+      margin-top: 10px;
+      display: inline-block;
+      background: #25D366;
+      color: white;
+      padding: 10px 15px;
+      border-radius: 10px;
+      text-decoration: none;
+    }
+    .total-box {
+      margin-top: 20px;
+      font-weight: bold;
+      font-size: 18px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>🎉 Caroni Rifas</h1>
+    <p>Prêmio: R$500 via Pix</p>
+    <p>Sorteio: 15 de Setembro de 2025</p>
+  </header>
+
+  <img src="https://i.imgur.com/k4B9o1e.png" alt="Prêmio R$500" class="prize-img">
+
+  <div class="pix-box">
+    <input type="text" id="pixKey" value="valdineicarone@gmail.com" readonly>
+    <button class="copy-btn" onclick="copiarPix()">Copiar Pix</button>
+  </div>
+
+  <div class="numbers" id="numbersContainer"></div>
+
+  <div class="buy-box">
+    <input type="text" id="whatsInput" placeholder="Seu número do WhatsApp">
+    <button class="buy-btn" onclick="comprar()">Finalizar Compra</button>
+    <div class="total-box" id="totalArrecadado">Total arrecadado: R$0</div>
+  </div>
+
+  <a class="share-btn" href="https://wa.me/?text=Quero%20participar%20da%20rifa%20de%20R$500%20da%20Caroni%20Rifas!%20Acesse:%20https://seusite.com" target="_blank">📤 Compartilhar no WhatsApp</a>
+
+  <script>
+    const totalNumeros = 1000;
+    const precoPorNumero = 2;
+    const container = document.getElementById('numbersContainer');
+    const totalArrecadado = document.getElementById('totalArrecadado');
+
+    let vendidos = JSON.parse(localStorage.getItem("vendidos")) || [];
+
+    function gerarNumeros() {
+      for (let i = 0; i < totalNumeros; i++) {
+        const num = String(i).padStart(3, '0');
+        const div = document.createElement('div');
+        div.className = 'number';
+        div.textContent = num;
+        div.dataset.numero = num;
+
+        if (vendidos.includes(num)) {
+          div.classList.add('sold');
+        }
+
+        div.onclick = function () {
+          if (!div.classList.contains('sold')) {
+            div.classList.toggle('selected');
+          }
+        };
+
+        container.appendChild(div);
+      }
+      atualizarTotal();
+    }
+
+    function comprar() {
+      const whats = document.getElementById('whatsInput').value.trim();
+      if (whats === "") {
+        alert("Digite seu número de WhatsApp!");
+        return;
+      }
+
+      const selecionados = [...document.querySelectorAll('.number.selected')];
+      if (selecionados.length === 0) {
+        alert("Selecione pelo menos 1 número!");
+        return;
+      }
+
+      const confirm = window.confirm(`Confirmar compra de ${selecionados.length} número(s)? Total: R$${selecionados.length * precoPorNumero}`);
+      if (!confirm) return;
+
+      selecionados.forEach(div => {
+        div.classList.remove('selected');
+        div.classList.add('sold');
+        vendidos.push(div.dataset.numero);
+      });
+
+      localStorage.setItem("vendidos", JSON.stringify(vendidos));
+      atualizarTotal();
+      alert("Compra registrada! Envie o comprovante do Pix para confirmação.");
+    }
+
+    function copiarPix() {
+      const pixInput = document.getElementById("pixKey");
+      pixInput.select();
+      document.execCommand("copy");
+      alert("Chave Pix copiada!");
+    }
+
+    function atualizarTotal() {
+      const total = vendidos.length * precoPorNumero;
+      totalArrecadado.textContent = `Total arrecadado: R$${total}`;
+      if (vendidos.length >= totalNumeros) {
+        document.body.innerHTML = "<h2 style='padding:50px'>🚫 Rifa Encerrada - Todos os números foram vendidos!</h2>";
+      }
+    }
+
+    gerarNumeros();
+  </script>
+
+</body>
+</html>  grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
       gap: 6px;
       max-height: 300px;
       overflow-y: auto;
